objects/Vehicle_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Transmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunroof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunroof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_Wheel_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Wheel Drive</label>
        <type>Checkbox</type>
    </fields>
    <label>Vehicle Interest</label>
    <nameField>
        <displayFormat>VI-{000}</displayFormat>
        <label>Vehicle Interest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>